--- a/main.html
+++ b/main.html
@@ -8,9 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <script type="text/javascript" src="./script.js"></script>
 
+	<nav>
+		<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About us</a></li>
+			<li><a href="#">Contact us</a></li>
+		</ul>
+	</nav>
+
+	<main>
+		<div>
+			<h1>3 random images</h1>
+			<img src="https://picsum.photos/id/123/200/300" alt="img"> <br>
+			<img src="https://picsum.photos/id/124/200/300" alt="img"> <br>
+			<img src="https://picsum.photos/id/125/200/300" alt="img">
+		</div>
+	</main>
 </body>
 
 </html>
